5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1871_1715.log
== TEST (2019-07-02 16:16:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

campo = array(eval(input("campo de batalha")))

linha = int(input("digite um linha:"))
coluna = int(int("digite uma coluna:"))

if(campo[linha,coluna] == "N"):
	print("FOGO")
elif(campo[linha,colna == "L"]):
	print("AGUA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:17:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

campo = array(eval(input("campo de batalha")))

linha = int(input("digite um linha:"))
coluna = int(input("digite uma coluna:"))

if(campo[linha,coluna] == "N"):
	print("FOGO")
elif(campo[linha,colna == "L"]):
	print("AGUA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:18:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

campo = array(eval(input("campo de batalha")))

linha = int(input("digite um linha:"))
coluna = int(input("digite uma coluna:"))

if(campo[linha,coluna] == "N"):
	print("FOGO")
elif(campo[linha,colna == "L"]):
	print("AGUA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:19:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

campo = array(eval(input("campo de batalha")))

linha = int(input("digite um linha:"))
coluna = int(input("digite uma coluna:"))

if(campo[linha,coluna] == "N"):
	print("FOGO")
elif(campo[linha,coluna == "L"]):
	print("AGUA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:19:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

campo = array(eval(input("campo de batalha")))

linha = int(input("digite um linha:"))
coluna = int(input("digite uma coluna:"))

if(campo[linha,coluna] == "N"):
	print("FOGO")
elif(campo[linha,coluna == "L"]):
	print("AGUA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

campo = array(eval(input("campo de batalha")))

linha = int(input("digite um linha:"))
coluna = int(input("digite uma coluna:"))

if(campo[linha,coluna] == "N"):
	print("FOGO")
elif(campo[linha,coluna] == "L"):
	print("AGUA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:29:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

campo = array(eval(input("campo de batalha")))

linha = int(input("digite um linha:"))
coluna = int(input("digite uma coluna:"))

if(campo[linha,coluna] == "N"):
	print("FOGO")
elif(campo[linha,coluna] == "L"):
	print("AGUA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:29:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

campo = array(eval(input("campo de batalha:")))

linha = int(input("digite um linha:"))
coluna = int(input("digite uma coluna:"))

if(campo[linha,coluna] == "N"):
	print("FOGO")
elif(campo[linha,coluna] == "L"):
	print("AGUA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:34:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

campo = array(eval(input("campo de batalha:")))

linha = int(input("digite um linha:"))
coluna = int(input("digite uma coluna:"))

if(campo[linha,coluna] == "N"):
	print("FOGO")
elif(campo[linha,coluna] == "L"):
	print("AGUA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:36:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

campo = array(eval(input("campo de batalha:")))

linha = int(input("digite um linha:"))
coluna = int(input("digite uma coluna:"))

if(campo[linha,coluna] == "N"):
	print("FOGO")
elif(campo[linha,coluna] == "L"):
	print("AGUA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:38:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

campo = array(eval(input("campo de batalha:")))

linha = int(input("digite um linha:"))
coluna = int(input("digite uma coluna:"))

if(campo[linha,coluna] == "N"):
	print("FOGO")
elif(campo[linha,coluna] == "L"):
	print("AGUA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:39:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

campo = array(eval(input("campo de batalha:")))

linha = int(input("digite um linha:"))
coluna = int(input("digite uma coluna:"))

if(campo[linha,coluna] == "N"):
	print("FOGO")
elif(campo[linha,coluna] == "L"):
	print("AGUA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:40:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

campo = array(eval(input("campo de batalha:")))

linha = int(input("digite um linha:"))
coluna = int(input("digite uma coluna:"))

if(campo[linha,coluna] == "N"):
	print("FOGO")
elif(campo[linha,coluna] == "L"):
	print("AGUA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:42:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

campo = array(eval(input("campo de batalha:")))

linha = int(input("digite um linha:"))
coluna = int(input("digite uma coluna:"))

if(campo[linha,coluna] == "N"):
	print("FOGO")
elif(campo[linha,coluna] == "L"):
	print("AGUA")
-- EXECUTION TIME:
1.04227
-- TEST CASE 1:
---- input:
[['L','N','L','L'],['N','N','L','L'],['N','N','L','N'],['N','L','L','L']]
3
2
---- correct output:
AGUA
---- user output:
AGUA
-- TEST CASE 2:
---- input:
[['N','L','L','N','N'],['N','N','N','N','N'],['L','L','N','L','N'],['N','L','N','N','N'],['N','L','N','L','N']]
3
4
---- correct output:
FOGO
---- user output:
FOGO
-- TEST CASE 3:
---- input:
[['L','L','N'],['N','L','L'],['L','N','L']]
2
2
---- correct output:
AGUA
---- user output:
AGUA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:44:08) 
-- CODE:
from numpy import*
from numpy.linalg import*

campo = array(eval(input("campo de batalha:")))

linha = int(input("digite um linha:")
coluna = int(input("digite uma coluna:"))

if(campo[linha,coluna] == "N"):
	print("FOGO")
elif(campo[linha,coluna] == "L"):
	print("AGUA")
-- EXECUTION TIME:
0.638025
-- ERROR:
  File "/home/codebench/codes/1871/1715/main.py", line 7
    coluna = int(input())
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:44:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

campo = array(eval(input("campo de batalha:")))

linha = int(input("digite um linha:"))
coluna = int(input("digite uma coluna:"))

if(campo[linha,coluna] == "N"):
	print("FOGO")
elif(campo[linha,coluna] == "L"):
	print("AGUA")
-- EXECUTION TIME:
1.09704
-- TEST CASE 1:
---- input:
[['L','N','L','L'],['N','N','L','L'],['N','N','L','N'],['N','L','L','L']]
3
2
---- correct output:
AGUA
---- user output:
AGUA
-- TEST CASE 2:
---- input:
[['N','L','L','N','N'],['N','N','N','N','N'],['L','L','N','L','N'],['N','L','N','N','N'],['N','L','N','L','N']]
3
4
---- correct output:
FOGO
---- user output:
FOGO
-- TEST CASE 3:
---- input:
[['L','L','N'],['N','L','L'],['L','N','L']]
2
2
---- correct output:
AGUA
---- user output:
AGUA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:44:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

campo = array(eval(input("campo de batalha:")))

linha = int(input("digite um linha:"))
coluna = int(input("digite uma coluna:"))

if(campo[linha,coluna] == "N"):
	print("FOGO")
elif(campo[linha,coluna] == "L"):
	print("AGUA")
-- EXECUTION TIME:
1.14074
-- TEST CASE 1:
---- input:
[['L','N','L','L'],['N','N','L','L'],['N','N','L','N'],['N','L','L','L']]
3
2
---- correct output:
AGUA
---- user output:
AGUA
-- TEST CASE 2:
---- input:
[['N','L','L','N','N'],['N','N','N','N','N'],['L','L','N','L','N'],['N','L','N','N','N'],['N','L','N','L','N']]
3
4
---- correct output:
FOGO
---- user output:
FOGO
-- TEST CASE 3:
---- input:
[['L','L','N'],['N','L','L'],['L','N','L']]
2
2
---- correct output:
AGUA
---- user output:
AGUA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:46:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
campo = array(eval(input("campo de batalha:")))

linha = int(input("digite um linha:"))
coluna = int(input("digite uma coluna:"))

if(campo[linha,coluna] == "N"):
	print("FOGO")
elif(campo[linha,coluna] == "L"):
	print("AGUA")
-- EXECUTION TIME:
1.15613
-- TEST CASE 1:
---- input:
[['L','N','L','L'],['N','N','L','L'],['N','N','L','N'],['N','L','L','L']]
3
2
---- correct output:
AGUA
---- user output:
AGUA
-- TEST CASE 2:
---- input:
[['N','L','L','N','N'],['N','N','N','N','N'],['L','L','N','L','N'],['N','L','N','N','N'],['N','L','N','L','N']]
3
4
---- correct output:
FOGO
---- user output:
FOGO
-- TEST CASE 3:
---- input:
[['L','L','N'],['N','L','L'],['L','N','L']]
2
2
---- correct output:
AGUA
---- user output:
AGUA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
